<resources>
    <string name="app_name">calendar-predict</string>
    <string name="new_goal">Nowy cel…</string>
    <string name="my_goals">Moje cele</string>
    <string name="dodaj_nowy_cel">Dodaj nowy cel</string>
    <string name="podaj_ilo">Podaj ilość:</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="placeholder">TextView</string>
    <string name="codzienny">CODZIENNY</string>
    <string name="cotygodniowy">COTYGODNIOWY</string>
    <string name="comiesi_czny">COMIESIĘCZNY</string>
    <string name="termin_wyga_ni_cia">Termin wygaśnięcia</string>
    <string name="wybierz_typ_celu">Wybierz typ celu:</string>
    <string name="potwierd">Potwierdź</string>
    <string name="wpisz_kategori">Wpisz kategorię</string>
    <string name="edytuj_cel">Edytuj cel…</string>
    <string name="usu_cel">Usuń cel</string>
    <string name="edytuj">Edytuj</string>
    <string name="podsumuj">Podsumuj</string>
    <string name="data">Data</string>
    <string name="title_activity_friends_list">FriendsListActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>