<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light"
    android:forceDarkAllowed="false"
    tools:context=".AddGoalActivity">

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bangers"
        android:onClick="selectDate"
        android:text="@string/termin_wyga_ni_cia"
        android:textColor="#00BCD4"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/targetMinutes"
        app:layout_constraintVertical_bias="0.334" />

    <TextView
        android:id="@+id/selectedDateTimeDeadline"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextTaskName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="category"
        android:ems="10"
        android:hint="@string/wpisz_kategori"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingHorizontal="10dp"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconPickerTextView"
        app:layout_constraintVertical_bias="0.053" />

    <Button
        android:id="@+id/confrimAddButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00BCD4"
        android:fontFamily="@font/bangers"
        android:onClick="addTask"
        android:text="@string/potwierd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.861"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectedDateTimeDeadline"
        app:layout_constraintVertical_bias="0.871" />

    <TextView
        android:id="@+id/priorityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bangers"
        android:paddingHorizontal="10dp"
        android:text="@string/wybierz_typ_celu"
        android:textAlignment="center"
        android:textColor="#00BCD4"
        android:textSize="36sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTaskName"
        app:layout_constraintVertical_bias="0.00999999" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priorityTextView"
        app:layout_constraintVertical_bias="0.01999998">

        <CheckBox
            android:id="@+id/daily"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="true"
            android:fontFamily="@font/bangers"
            android:onClick="chooseKind"
            android:text="@string/codzienny"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="normal" />

        <CheckBox
            android:id="@+id/weekly"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/bangers"
            android:onClick="chooseKind"
            android:text="@string/cotygodniowy"
            android:textColor="#8BC34A"
            android:textSize="20sp"
            android:textStyle="normal"
            tools:layout_editor_absoluteX="141dp"
            tools:layout_editor_absoluteY="389dp" />

        <CheckBox
            android:id="@+id/monthly"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/bangers"
            android:onClick="chooseKind"
            android:text="@string/comiesi_czny"
            android:textColor="#FFEB3B"
            android:textSize="20sp"
            android:textStyle="normal"
            tools:layout_editor_absoluteX="275dp"
            tools:layout_editor_absoluteY="398dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/iconPickerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:fontFamily="@font/bangers"
        android:paddingHorizontal="10dp"
        android:text="@string/dodaj_nowy_cel"
        android:textAlignment="center"
        android:textColor="#00BCD4"
        android:textSize="36sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bangers"
        android:paddingHorizontal="10dp"
        android:text="@string/podaj_ilo"
        android:textAlignment="center"
        android:textColor="#00BCD4"
        android:textSize="36sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#00BCD4"
        android:onClick="amountIncrease"
        android:text="@string/plus"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.67"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.13" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:backgroundTint="#00BCD4"
        android:onClick="amountDecrease"
        android:text="@string/minus"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.13" />

    <TextView
        android:id="@+id/targetMinutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder"
        android:textColor="#5C6BC0"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.01999998" />

</androidx.constraintlayout.widget.ConstraintLayout>